# Discord-support-bot

./: .gitignore  README.md  SERVER_SETUP.md  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
scripts/: deploy.sh
src/cronbot/: bot.py  config.py  db.py  health.py  logging_setup.py  main.py  models.py  scheduler.py
src/cronbot/cogs/: confronts.py  cron.py  misc.py  phrases.py
src/cronbot/services/: confronts.py  phrases.py  reminders.py
tests/: conftest.py  test_confront_service.py  test_cron_commands.py  test_phrase_service.py  test_reminder_service.py  test_time_parse.py
